Improve text display for typing simulation: Corrected cursor offset and enabled word-wrap for realistic text flow.

--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,23 @@ body {
   padding: 0;
   background-color: black;
   display: grid;
-  place-content: center;
+  justify-content: center;
   height: 100vh;
   color: white;
 }
 
 h1 {
+  margin-top: 20vh;
+  width: 80vw; /* remove width to have text centered horizontally */
   font-family: "Special Elite", serif;
-  font-size: 9rem;
+  font-size: 3rem;
   letter-spacing: 0.8rem;
+  word-wrap: break-word;
 }
 
 .cursor {
-    position: relative;
-    font-weight: bold;
-    opacity: 1;
-    left: -.1em; 
-}  
+  position: relative;
+  font-weight: bold;
+  opacity: 1;
+  left: -0.1em;
+}
